Working Attack / Release envelope

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "files.associations": {
         "cmath": "cpp",
         "array": "cpp"
+    },
+    "vim.handleKeys": {
+        "<C-p>": false
     }
 }
